# so101-isaaclab-mimic-pipeline

./: .gitignore  NOTICE.md  README.md  pyproject.toml
docs/env/: env_so101_vla_isaaclab_from_history.yml  env_so101_vla_isaaclab_full_export.yml  env_so101_vla_isaaclab_key_versions_WORKING_generate_actions.txt  env_so101_vla_isaaclab_key_versions_current.txt  env_so101_vla_isaaclab_notes.txt
docs/local/: README_LOCAL.md
src/isaac_so_arm101/data/export/: to_lerobot.py
src/isaac_so_arm101/policies/: base_policy.py  lerobot_policy.py  pi0_policy.py  random_policy.py  zero_policy.py
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/scripts/: export_lerobot.py  run_policy.py
tools/data/: convert_isaac_hdf5_to_lerobot_so101.py  convert_lerobot_to_isaac_hdf5_so101.py  inspect_hdf5.py  replay_dataset_with_cameras.py
tools/debug/: calibrate_cube_scene.py  check_cube_and_gripper_loc.py  check_cube_and_gripper_loc_mimic.py  check_generated_camera_obs.py  debug_object_relative_to_eef.py  debug_pinocchio_so101.py  debug_replay_annotated_eef_targets.py  debug_so101_frame_audit.py  filter_successful_replays.py  test_so101_mimic_ik_action.py
tools/eval/: eval_vla_foundry_so101.py
tools/mimic/: SO101_MIMIC_DEBUG_WORKFLOW.md  annotate_demos_so101_debug.py  generate_dataset_so101.py
tools/vla_foundry_so101/: README.md  README_DIAGNOSTICS.md  eval_vla_isaaclab_example.sh  nearest_gt_compare_preprocessed.py  preprocess_so101.py  replay_gt_episode_isaaclab.py  run_live_vla_tests.sh  train_vla.py  train_vla_and_shutdown.sh  vla_anchor_sweep.py  vla_vibe_check.py
(+40 files in other folders)
