[project]
name = "so101-isaaclab"
version = "0.1.0"
description = "SO101 Isaac Lab, Isaac Mimic, LeRobot, and VLA Foundry pipeline"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
list_envs = "isaac_so_arm101.scripts.list_envs:main"
zero_agent = "isaac_so_arm101.scripts.zero_agent:main"
random_agent = "isaac_so_arm101.scripts.random_agent:main"
rsl_train = "isaac_so_arm101.scripts.rsl_rl.train:main"
rsl_play = "isaac_so_arm101.scripts.rsl_rl.play:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"